Created status on each cell

--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -14,3 +14,15 @@
   text-align: center;
   text-transform: uppercase;
 }
+
+.incorrect {
+  background-color: red !important;
+}
+
+.correct {
+  background-color: green !important;
+}
+
+.included {
+  background-color: orange !important;
+}
