--- a/src/components/KeyboardButton/KeyboardButton.module.css
+++ b/src/components/KeyboardButton/KeyboardButton.module.css
@@ -15,6 +15,14 @@
   cursor: auto;
 }
 
+.correct_button {
+  background-color: green;
+}
+
+.possible_button {
+  background-color: orange;
+}
+
 .button_value {
   font-size: 1.25em;
   text-transform: uppercase;
