--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -1,10 +1,13 @@
 .cell {
   display: flex;
-  width: 4em;
-  height: 4em;
+  min-width: 1em;
+  min-height: 1em;
+  max-height: 5em;
+  max-width: 5em;
   background-color: rgb(80, 80, 80);
   margin: 0.15em;
   border-radius: 0.5em;
+  aspect-ratio: 1 / 1;
 }
 
 .cell_value {
