--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -10,6 +10,10 @@
   aspect-ratio: 1 / 1;
 }
 
+.active {
+  border: 2px solid lightblue;
+}
+
 .cell_value {
   font-size: 1.75em;
   margin: auto;
