--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -1,25 +1,61 @@
-.cell {
+.cell_container {
+  perspective: 1000px;
+  align-items: center;
+  justify-content: center;
   display: flex;
   min-width: 1em;
   min-height: 1em;
   max-height: 5em;
   max-width: 5em;
-  background-color: rgb(80, 80, 80);
+  background-color: transparent;
   margin: 0.15em;
   border-radius: 0.5em;
   aspect-ratio: 1 / 1;
 }
 
-.active {
-  border: 2px solid lightblue;
+.cell {
+  border-radius: 0.5em;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform-style: preserve-3d;
+  transition: transform 0.6s;
 }
 
 .cell_value {
   font-size: 1.75em;
-  margin: auto;
-  font-weight: bold;
-  text-align: center;
   text-transform: uppercase;
+}
+
+.cell.flipped {
+  transform: rotateY(180deg);
+}
+
+.cell_front,
+.cell_back {
+  border-radius: 0.5em;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+}
+
+.cell_front {
+  background-color: rgb(80, 80, 80);
+}
+
+.cell_back {
+  transform: rotateY(180deg);
+}
+
+.active {
+  border: 2px solid lightblue;
 }
 
 .incorrect {
