--- a/src/components/Cell/Cell.module.css
+++ b/src/components/Cell/Cell.module.css
@@ -23,7 +23,7 @@
 }
 
 .cell_value {
-  font-size: 1.75em;
+  font-size: 2em;
   text-transform: uppercase;
 }
 
@@ -42,7 +42,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 18px;
+
   font-weight: bold;
   color: white;
 }
@@ -56,6 +56,10 @@
 }
 
 .active {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  border-radius: 0.5em;
   border: 2px solid lightblue;
 }
 
