--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -28,11 +28,19 @@
 }
 
 .new_game_button {
-  background-color: rgb(80, 80, 80);
+  display: flex;
+  align-items: center;
+  color: white;
+  background-color: rgb(16, 168, 228);
   border: none;
   cursor: pointer;
   border-radius: 0.5em;
   padding: 1em 2em;
+}
+
+.new_game_button_text {
+  font-size: 1.25em;
+  margin-right: 0.5em;
 }
 
 .game_options {
