--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -1,7 +1,7 @@
 .title {
   font-size: 1.5em;
   text-align: center;
-  margin-bottom: 1em;
+  margin-top: 1em;
 }
 
 .wrapper {
@@ -18,6 +18,7 @@
   flex-direction: column;
   width: 100%;
   height: 50vh;
+  margin: auto;
 }
 
 .words_row {
