Implemented little word shake after word error

--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -53,3 +53,44 @@
   margin-top: auto;
   margin-bottom: 2em;
 }
+
+@keyframes shake {
+  0% {
+    transform: translateX(3px) rotate(0);
+  }
+  10% {
+    transform: translateX(-3px) rotate(0);
+  }
+
+  20% {
+    transform: translateX(-3px) rotate(0);
+  }
+  30% {
+    transform: translateX(3px) rotate(0);
+  }
+  40% {
+    transform: translateX(3px) rotate(0);
+  }
+  50% {
+    transform: translateX(-3px) rotate(0);
+  }
+  60% {
+    transform: translateX(-3px) rotate(0);
+  }
+  70% {
+    transform: translateX(3px) rotate(0);
+  }
+  80% {
+    transform: translateX(-3px) rotate(0);
+  }
+  90% {
+    transform: translateX(3px) rotate(0);
+  }
+  100% {
+    transform: translateX(3px) rotate(0);
+  }
+}
+
+.shake {
+  animation: shake 0.5s linear 1;
+}
