--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -49,6 +49,47 @@ button {
   justify-content: center;
 }
 
+.stats_container {
+  margin-bottom: 2em;
+}
+
+.stats_title {
+  text-align: center;
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.8em;
+}
+
+.stats_header_flex {
+  display: flex;
+  justify-content: center;
+}
+
+.stat_header_item {
+  text-align: center;
+  margin: 0 2em;
+}
+
+.stat_header_item .number {
+  font-size: 1.2em;
+}
+
+.stat_header_item .text {
+  font-size: 1.1em;
+}
+
+.tries_title {
+  font-size: 1.2em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-weight: bold;
+  text-align: center;
+}
+
+.tries_wrapper {
+  margin: 0 1em;
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
